Updated timeline with Sprint 5

--- a/index.html
+++ b/index.html
@@ -201,8 +201,13 @@
                     </div>
                     <div id="event">
                         <h2>Sprint 04</h2>
+                        <h5>Not Completed</h5>
+                        <h6>Unable to meet with client.</h6>
+                    </div>
+                    <div id="event">
+                        <h2>Sprint 05</h2>
                         <h5>In-Progress</h5>
-                        <h6></h6>
+                        <h6>Work on a functional UI of the app.</h6>
                     </div>
                 </section>
             </section>
